# bfs-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: fs.rs  lib.rs  main.rs
src/backends/: aws.rs  mod.rs
